--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,7 @@ table {
 
 .home-container {
 
-  background-image: url(./images/background-road.webp);
+  background-image: url(../images/background-road.webp);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom;
